[gd_scene load_steps=4 format=3 uid="uid://bk2mf7yt3x8vh"]

[ext_resource type="Script" path="res://commons/interfaces/sine_wave_controller.gd" id="1"]
[ext_resource type="PackedScene" path="res://commons/interfaces/value_mapper_2d.tscn" id="2"]
[ext_resource type="PackedScene" path="res://commons/interfaces/value_mapper_1d.tscn" id="3"]

[node name="SineWaveController" type="Node3D"]
script = ExtResource("1")
use_mario_slider = false

[node name="ValueMapper2D" parent="." instance=ExtResource("2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.8, 0, 0)
plane_size = Vector2(0.8, 0.8)
output_x_min = 200.0
output_x_max = 2000.0
output_y_min = 0.0
output_y_max = 1.0
label_x = "Freq"
label_y = "Amp"

[node name="ValueMapper1D" parent="." instance=ExtResource("3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.8, 0, 0)
line_length = 0.8
output_min = 0.0
output_max = 6.28318
label_text = "Phase"

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.92388, 0.382683, 0, -0.382683, 0.92388, 0, 0.8, 2.5)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 2, 0)
